@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.3.0 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 77658b4f9e0f4407b7cdb82c9e4db8bc) *)
+(* DO NOT EDIT (digest: 271ebd96a0081fcc794689800a016f15) *)
 (*
    Regenerated by OASIS v0.3.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5591,7 +5591,12 @@ let setup_t =
           copyrights = [];
           maintainers = [];
           authors =
-            ["Anil Madhavapeddy"; "Richard Mortier"; "Thomas Gazagnaire"];
+            [
+               "Anil Madhavapeddy";
+               "Richard Mortier";
+               "Thomas Gazagnaire";
+               "Pierre Chambart"
+            ];
           homepage = None;
           synopsis = "Manipulate external buffers as C-like structs";
           description = None;
@@ -5642,6 +5647,16 @@ let setup_t =
                       flag_description = Some "build the Lwt library";
                       flag_default = [(OASISExpr.EBool true, false)];
                       });
+               Flag
+                 ({
+                     cs_name = "unix";
+                     cs_data = PropList.Data.create ();
+                     cs_plugin_data = [];
+                     },
+                   {
+                      flag_description = Some "build the UNIX library";
+                      flag_default = [(OASISExpr.EBool true, true)];
+                      });
                Library
                  ({
                      cs_name = "cstruct";
@@ -5679,7 +5694,7 @@ let setup_t =
                       });
                Library
                  ({
-                     cs_name = "cstruct_lwt";
+                     cs_name = "lwt_cstruct";
                      cs_data = PropList.Data.create ();
                      cs_plugin_data = [];
                      },
@@ -5709,6 +5724,40 @@ let setup_t =
                       lib_internal_modules = [];
                       lib_findlib_parent = Some "cstruct";
                       lib_findlib_name = Some "lwt";
+                      lib_findlib_containers = [];
+                      });
+               Library
+                 ({
+                     cs_name = "unix_cstruct";
+                     cs_data = PropList.Data.create ();
+                     cs_plugin_data = [];
+                     },
+                   {
+                      bs_build = [(OASISExpr.EBool true, true)];
+                      bs_install = [(OASISExpr.EBool true, true)];
+                      bs_path = "unix/";
+                      bs_compiled_object = Best;
+                      bs_build_depends =
+                        [
+                           InternalLibrary "cstruct";
+                           FindlibPackage ("unix", None)
+                        ];
+                      bs_build_tools = [ExternalTool "ocamlbuild"];
+                      bs_c_sources = [];
+                      bs_data_files = [];
+                      bs_ccopt = [(OASISExpr.EBool true, [])];
+                      bs_cclib = [(OASISExpr.EBool true, [])];
+                      bs_dlllib = [(OASISExpr.EBool true, [])];
+                      bs_dllpath = [(OASISExpr.EBool true, [])];
+                      bs_byteopt = [(OASISExpr.EBool true, [])];
+                      bs_nativeopt = [(OASISExpr.EBool true, [])];
+                      },
+                   {
+                      lib_modules = ["Unix_cstruct"];
+                      lib_pack = false;
+                      lib_internal_modules = [];
+                      lib_findlib_parent = Some "cstruct";
+                      lib_findlib_name = Some "unix";
                       lib_findlib_containers = [];
                       });
                Library
@@ -5756,7 +5805,7 @@ let setup_t =
           };
      oasis_fn = Some "_oasis";
      oasis_version = "0.3.0";
-     oasis_digest = Some "6\156j\020O\237+\170\206\127\250\014\022g\156\005";
+     oasis_digest = Some "\147N\244$\222\006I\132HrM\234\011\149\137~";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false;
@@ -5764,6 +5813,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 5768 "setup.ml"
+# 5817 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
